--- a/Textinput.html
+++ b/Textinput.html
@@ -12,6 +12,10 @@
 
 <p id="printarr"></p>
 
+<button type="button" onclick="sendData()">Request data</button>
+
+<p id="demo"></p>
+
 <script>
 /* In this example, we use a cross-browser solution, because the keyCode property does not work on the onkeypress event in Firefox. However, the which property does.
 
@@ -29,6 +33,18 @@ var timeDiff = 0;
 var lastKey = "a";
 
 var currKey = "a";
+
+function sendData(){
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+        document.getElementById("demo").innerHTML = this.responseText;
+        }
+    };
+    xhttp.open("POST", "http://127.0.0.1:5000/api/lookup", true);
+    xhttp.setRequestHeader("Content-type", "application/json");
+    xhttp.send('{"test":"test"}');
+}
 
 
 function myFunction(event) {
