--- a/kinda.html
+++ b/kinda.html
@@ -2,9 +2,7 @@
 <html>
 <body>
 
-<p>This example uses the HTML DOM to assign an "onkeydown" event to an input element.</p>
-
-<p>Press a key inside the text field to set a red background color.</p>
+<p>A quotation is the repetition of one expression as part of another one, particularly when the quoted expression is well-known or explicitly attributed by citation to its original source.</p>
 
 <input type="text" id="demo">
 
